Debug e correções na criação de contas e histórico: evita duplicações e corrige valor exibido